Correct path for dev build

--- a/Dockerfile.okteto
+++ b/Dockerfile.okteto
@@ -19,17 +19,12 @@ RUN --mount=target=$GOMODCACHE,type=cache,id=firstrun-gomodcache \
 
 
 ## Now add the project and compile
-COPY . /go/src/github.com/marc-campbell/firstrun
+COPY . /go/src/github.com/firstrunhq/firstrun
 RUN --mount=type=cache,target=$GOMODCACHE,id=firstrun-gomodcache \
     --mount=type=cache,target=$GOCACHE,id=firstrun-gocache \
     make build
 
-# RUN --mount=target=/tmp/.cache/gocache,id=firstrun-gocache,type=cache \
-#     mkdir -p $GOCACHE \
-#     && cp -r /tmp/.cache/gocache/* $GOCACHE
-
-RUN --mount=target=/tmp/.cache/gomodcache,id=firstrun-gomodcache,type=cache \
-    mkdir -p $GOMODCACHE \
-    && cp -r /tmp/.cache/gomodcache/* $GOMODCACHE
+## download the modules without cache so they are in the dev image
+RUN go mod download
 
 RUN cp ./bin/firstrun-api /firstrun-api
