--- a/kustomize/overlays/okteto/deployment-api.yaml
+++ b/kustomize/overlays/okteto/deployment-api.yaml
@@ -5,7 +5,13 @@ metadata:
 spec:
   template:
     spec:
+      volumes:
+        - name: config-dir
+          configMap:
+            name: firstrun-config
       containers:
         - name: firstrun-api
           args: ["api", "--log-level", "debug"]
-
+          volumeMounts:
+            - name: firstrun-config
+              mountPath: /root/firstrun
