--- a/okteto.yml
+++ b/okteto.yml
@@ -11,7 +11,7 @@ deploy:
 dev:
   firstrun-api:
     command: bash
-    workdir: /go/src/github.com/firstrunjq/firstrun
+    workdir: /go/src/github.com/firstrunhq/firstrun
     sync:
       - .:/go/src/github.com/firstrunhq/firstrun
     resources:
