--- a/kustomize/overlays/okteto/deployment-api.yaml
+++ b/kustomize/overlays/okteto/deployment-api.yaml
@@ -6,7 +6,7 @@ spec:
   template:
     spec:
       volumes:
-        - name: config-dir
+        - name: firstrun-config
           configMap:
             name: firstrun-config
       containers:
