--- a/okteto.yml
+++ b/okteto.yml
@@ -2,8 +2,14 @@ build:
   firstrun-api:
     context: .
     dockerfile: Dockerfile.okteto
+  firstrun-frontend:
+    context: firstrun
+    dockerfile: firstrun/Dockerfile.okteto
 
 deploy:
+  - envsubst < firstrun/.env.tmpl > firstrun/.env
+
+  - cd kustomize/overlays/okteto && kustomize edit set image firstrun-frontend=${OKTETO_BUILD_FIRSTRUN_FRONTEND_IMAGE}
   - cd kustomize/overlays/okteto && kustomize edit set image firstrun-api=${OKTETO_BUILD_FIRSTRUN_API_IMAGE}
 
   - kubectl apply -k kustomize/overlays/okteto
@@ -18,3 +24,14 @@ dev:
       limits:
         cpu: "2"
         memory: 4Gi
+  firstrun-frontend:
+    command: yarn && yarn dev
+    workdir: /okteto
+    sync:
+      - ./firstrun:/okteto
+    resources:
+      limits:
+        cpu: "2"
+        memory: 4Gi
+    environment:
+      - FIRSTRUN_API=https://firstrun-api-${OKTETO_NAMESPACE}.cloud.okteto.net
