--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -70,7 +70,7 @@ jobs:
       - name: Build frontend image
         uses: docker/build-push-action@v2.6.1
         with:
-          context: .
+          context: ./firstrun
           tags: ${{ steps.prep-frontend.outputs.tags }}
           file: ./deploy/Dockerfile.frontend
           push: true
