--- a/firstrun/package.json
+++ b/firstrun/package.json
@@ -10,19 +10,32 @@
   "dependencies": {
     "@rjsf/bootstrap-4": "^4.2.0",
     "@rjsf/core": "^4.2.0",
+    "bcrypt": "^5.0.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.7.2",
+    "cookies": "^0.8.0",
     "cronstrue": "^1.122.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.29.1",
-    "next": "12.0.4",
+    "next": "^12.1.6",
+    "next-cookies": "^2.0.3",
     "query-string": "^7.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
+    "secure-random-string": "^1.1.3",
+    "slugify": "^1.6.5",
+    "sqlite": "^4.1.1",
+    "sqlite3": "^5.0.8",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^8.5.8",
+    "@types/node": "^18.0.0",
+    "@types/react": "18.0.1",
+    "@types/secure-random-string": "^1.1.1",
     "eslint": "7",
-    "eslint-config-next": "12.0.4"
+    "eslint-config-next": "12.0.4",
+    "typescript": "^4.7.3"
   }
 }
