workflow needs the code

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -9,6 +9,8 @@ jobs:
   build:
     runs-on: ubuntu-18.04
     steps:
+      - uses: actions/checkout@v3
+
       - id: prep-image
         run: |
           DOCKER_IMAGE=ghcr.io/firstrunapp/firstrun/firstrun
