--- a/firstrun/package.json
+++ b/firstrun/package.json
@@ -23,6 +23,7 @@
     "react": "17.0.2",
     "react-bootstrap": "^2.4.0",
     "react-dom": "17.0.2",
+    "request": "^2.88.2",
     "secure-random-string": "^1.1.3",
     "slugify": "^1.6.5",
     "sqlite": "^4.1.1",
